--- a/app/07product/views/xiaojing_detailinfo.html
+++ b/app/07product/views/xiaojing_detailinfo.html
@@ -266,7 +266,7 @@
 		</div>
 
     
-			<div class="panel panel-default">
+			<div class="panel panel-default" ng-if="obj.DataJson.length">
 				<!--<div class="panel-heading">票种信息</div>-->
 				<div class="panel-body">
 
