--- a/app/07product/views/productinfoaffirm.html
+++ b/app/07product/views/productinfoaffirm.html
@@ -137,7 +137,6 @@
 		</div>
 	</div>
 	
-	
 	<!-- 小径网络 -->
 	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_xiaojing'">
 		<div class="form-group">
@@ -163,6 +162,31 @@
 			</div>
 		</div>
 	</div>
-
+	
+	<!-- 自我游 -->
+	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_ziwoyou'">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">产品ID</label>
+			<div class="col-xs-10">
+				<p class="form-control-static" ng-bind-html="affirm.sysaffirm_target_goods_code"></p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_ziwoyou'">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">预订必须信息</label>
+			<div class="col-xs-10">
+				<p class="form-control-static" ng-bind-html="affirm.sysaffirm_target_goods_view"></p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_ziwoyou'">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">客人资料要求</label>
+			<div class="col-xs-10">
+				<p class="form-control-static" ng-bind-html="affirm.sysaffirm_target_goods_supply"></p>
+			</div>
+		</div>
+	</div>
 		
 </div>
