--- a/app/07product/views/p_affirm.html
+++ b/app/07product/views/p_affirm.html
@@ -180,6 +180,15 @@
 					<option value="1">1</option>
 	            </select>
 			</div>
+			<br/>
+			<br/>
+			<label class="col-xs-2 control-label">退票类型</label>
+			<div class="col-xs-10">
+				<select class="form-control" ng-model="affirm.sysaffirm_target_goods_back_type">
+					<option value="0">部分</option>
+					<option value="1">整单</option>
+	            </select>
+			</div>
 		</div>
 	</div>
 
