--- a/app/07product/views/p_affirm.html
+++ b/app/07product/views/p_affirm.html
@@ -187,6 +187,7 @@
 				<select class="form-control" ng-model="affirm.sysaffirm_target_goods_back_type">
 					<option value="0">部分</option>
 					<option value="1">整单</option>
+					<option value="2">不支持退票</option>
 	            </select>
 			</div>
 		</div>
