--- a/app/07product/views/productinfoaffirm.html
+++ b/app/07product/views/productinfoaffirm.html
@@ -194,6 +194,7 @@
 			<div class="col-xs-10">
 				<p class="form-control-static" ng-if="affirm.sysaffirm_target_goods_back_type == '1'">整单</p>
 				<p class="form-control-static" ng-if="affirm.sysaffirm_target_goods_back_type == '0'">部分</p>
+				<p class="form-control-static" ng-if="affirm.sysaffirm_target_goods_back_type == '2'">不支持退票</p>
 			</div>
 		</div>
 	</div>
