--- a/app/07product/views/productinforestrictrule.html
+++ b/app/07product/views/productinforestrictrule.html
@@ -159,6 +159,7 @@
 			<div class="col-sm-4 col-xs-12">
 				<p ng-if="saleobj.back_type == '1'" class="form-control-static">不允许</p>
 				<p ng-if="saleobj.back_type == '0'" class="form-control-static">允许</p>
+				<p ng-if="saleobj.back_type == '2'" class="form-control-static">整单</p>
 				<!--<label class="radio-inline">
 				  <input type="radio" name="back_type" value="0"
 				  ng-model="saleobj.back_type" ng-disabled="true"
