--- a/app/07product/views/restrictrule.html
+++ b/app/07product/views/restrictrule.html
@@ -144,13 +144,18 @@
 			<div class="col-sm-4 col-xs-12">
 				<label class="radio-inline">
 				  <input type="radio" name="back_type" value="0"
-				  ng-model="saleobj.back_type" ng-disabled="util.what == 'info'"
+				  ng-model="saleobj.back_type" 
 				  > 允许
 				</label>
 				<label class="radio-inline">
 				  <input type="radio" name="back_type" value="1"
-				  ng-model="saleobj.back_type" ng-disabled="util.what == 'info'"
+				  ng-model="saleobj.back_type" 
 				  > 不允许
+				</label>
+				<label class="radio-inline">
+				  <input type="radio" name="back_type" value="2"
+				  ng-model="saleobj.back_type" 
+				  > 整单
 				</label>
 			</div>
 			<div class="col-sm-6 col-xs-12">
@@ -236,14 +241,14 @@
 				  ng-model="saleobj.cardno_state" ng-disabled="util.what == 'info'"
 				  > 必填
 				</label>
-					<div class="col-sm-7 col-xs-12 pull-right" ng-show="saleobj.cardno_state == 1">
-					<input type="text"   class="form-control" placeholder="请输入身份证号首" ng-disabled="util.what == 'info'" ng-model="saleobj.cardno_limit">
+				<div class="col-sm-7 col-xs-12 pull-right" ng-show="saleobj.cardno_state == 1">
+					<input type="text" class="form-control" placeholder="请输入身份证号首" ng-disabled="util.what == 'info'" ng-model="saleobj.cardno_limit">
 				</div>
-			
+
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static text-danger">
-				下单时是否必填身份证号码。配置必填时，可以同时配置身份证号首，如：配置210106，只有210106开头的身份证号可以下单，如果不配置身份证号首，下单时则不对身份证号首进行校验
+					下单时是否必填身份证号码。配置必填时，可以同时配置身份证号首，如：配置210106，只有210106开头的身份证号可以下单，如果不配置身份证号首，下单时则不对身份证号首进行校验
 				</p>
 			</div>
 		</div>
