--- a/app/07product/views/customPriceCalendar.html
+++ b/app/07product/views/customPriceCalendar.html
@@ -45,7 +45,7 @@
                         <label class="col-sm-2 col-xs-12 control-label">市场价格</label>
                         <div class="col-sm-4 col-xs-12">
                             <div class="input-group">
-                                <span class="input-group-addon">¥</span>
+                                <span class="input-group-addon glyphicon glyphicon-yen"></span>
                                 <input type="number" class="form-control" placeholder="请输入市场价格" min='0' ng-model="saleobj.market_price">
                             </div>
                         </div>
@@ -58,7 +58,7 @@
                         <label class="col-sm-2 col-xs-12 control-label">居游价格</label>
                         <div class="col-sm-4 col-xs-12">
                             <div class="input-group">
-                                <span class="input-group-addon">¥</span>
+                                <span class="input-group-addon glyphicon glyphicon-yen"></span>
                                 <input type="number" class="form-control" placeholder="请输入居游价格" min='0' ng-model="saleobj.guide_price">
                             </div>
                         </div>
@@ -71,7 +71,7 @@
                         <label class="col-sm-2 col-xs-12 control-label">成本价格</label>
                         <div class="col-sm-4 col-xs-12">
                             <div class="input-group">
-                                <span class="input-group-addon">¥</span>
+                                <span class="input-group-addon glyphicon glyphicon-yen"></span>
                                 <input type="number" class="form-control" placeholder="请输入分销商成本价格" min='0' ng-model="saleobj.cost_price">
                             </div>
                         </div>
@@ -84,12 +84,25 @@
                         <label class="col-sm-2 col-xs-12 control-label">采购价格</label>
                         <div class="col-sm-4 col-xs-12">
                             <div class="input-group">
-                                <span class="input-group-addon">¥</span>
+                                <span class="input-group-addon glyphicon glyphicon-yen"></span>
                                 <input type="number" class="form-control" placeholder="请输入供应商成本价格" min='0' ng-model="saleobj.purchase_price">
                             </div>
                         </div>
                         <div class="col-sm-6 mt10">
                             <font face="Courier" class="text-danger">与供应商结算价</font>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 col-xs-12 control-label">当日库存</label>
+                        <div class="col-sm-4 col-xs-12">
+                            <div class="input-group">
+                                <span class="input-group-addon glyphicon glyphicon-piggy-bank"></span>
+                                <input type="number" class="form-control" placeholder="请输入供应商成本价格" min='0' ng-model="saleobj.current_stock_num">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 mt10">
+                            <font face="Courier" class="text-danger">当日库存</font>
                         </div>
                     </div>
 
