--- a/app/07product/views/updatePriceCalendar.html
+++ b/app/07product/views/updatePriceCalendar.html
@@ -157,6 +157,19 @@
                         </div>
                     </div>
 
+                    <div class="form-group">
+                        <label class="col-sm-2 col-xs-12 control-label">当日库存</label>
+                        <div class="col-sm-4 col-xs-12">
+                            <div class="input-group">
+                                <span class="input-group-addon">¥</span>
+                                <input type="number" class="form-control" placeholder="请输入供应商成本价格" min='0' ng-model="saleobj.current_stock_num">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 mt10">
+                            <font face="Courier" class="text-danger">当日库存</font>
+                        </div>
+                    </div>
+
                     <!--<div class="form-group" >
                         <label class="col-sm-2 col-xs-12 control-label">库存</label>
                         <div class="col-sm-4 col-xs-12">
