--- a/app/07product/views/supply_ziwoyou.html
+++ b/app/07product/views/supply_ziwoyou.html
@@ -42,5 +42,12 @@
 			</tr>
 		</tbody>
 	</table>
+	<div class="text-right">
+
+		<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"
+		 ng-change="load()" items-per-page="itemsPerPage" previous-text="上一页" next-text="下一页" first-text="首页" last-text="末页" rotate="false">
+		</uib-pagination>
+
+	</div>
 
 </div>
