--- a/app/07product/views/p_affirm.html
+++ b/app/07product/views/p_affirm.html
@@ -65,7 +65,7 @@
 	</div>
 
 	<!-- 票付通 -->
-	<div class="col-xs-10" ng-show="affirm.sysaffirm_target_code == 'supply_piaofutong'">
+	<div class="col-xs-10" ng-show="affirm.sysaffirm_target_code.indexOf('supply_piaofutong') == 0">
 		<div class="form-group">
 			<label class="col-xs-2 control-label">商品id</label>
 			<div class="col-xs-10">
