--- a/app/07product/views/productinfoaffirm.html
+++ b/app/07product/views/productinfoaffirm.html
@@ -82,7 +82,7 @@
 	
 	
 	<!-- 票付通 -->
-	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_piaofutong'">
+	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code.indexOf('supply_piaofutong') == 0">
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">商品id</label>
 			<div class="col-xs-10">
@@ -90,7 +90,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_piaofutong'">
+	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code.indexOf('supply_piaofutong') == 0">
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">商品景区id</label>
 			<div class="col-xs-10">
@@ -98,7 +98,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_piaofutong'">
+	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code.indexOf('supply_piaofutong') == 0">
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">商品供应商id</label>
 			<div class="col-xs-10">
