--- a/app/10account/views/createaccount.html
+++ b/app/10account/views/createaccount.html
@@ -34,8 +34,9 @@
                 <label class="col-xs-2 control-label">姓名</label>
                 <div class="col-xs-6">
                     <input type="text" 
-                    class="form-control" placeholder="必填"
-                    ng-model="obj.name"
+                        class="form-control" 
+                        placeholder="必填"
+                        ng-model="obj.name"
                     >
                 </div>
             </div>
@@ -43,8 +44,10 @@
             <div class="form-group">
                 <label class="col-xs-2 control-label">电话</label>
                 <div class="col-xs-6">
-                    <input type="text" class="form-control"
-                    ng-model="obj.phone"
+                    <input type="text" 
+                        class="form-control"
+                        placeholder="必填"
+                        ng-model="obj.mobile"
                     >
                 </div>
             </div>
